Building Guide - Clarity
Building Guide notification now omit relative altitudes (Y) in its notification if its area of operation is in 2D (1 Block tall).

This should better hint to players that those 2 sets of 3 numbers spammed in chat are relative coordinates

--- a/src/main/resources/assets/openblocks/lang/es_AR.lang
+++ b/src/main/resources/assets/openblocks/lang/es_AR.lang
@@ -86,6 +86,7 @@ openblocks.misc.pointed_cannon=Cañón apuntado a %s, %s, %s
 openblocks.misc.change_mode=Cambiando a modo %s
 openblocks.misc.change_size=Cambiando tamaño a %sx%sx%s
 #openblocks.misc.change_box_size=Changing size to (%d,%d,%d):(%d,%d,%d) ## NEEDS TRANSLATION ##
+#openblocks.misc.change_area_size=Changing size to (%d,%d):(%d,%d) ## NEEDS TRANSLATION ##
 openblocks.misc.total_blocks=Número Total de Bloques: %d
 openblocks.misc.get_witched=¡Embrújate!
 openblocks.misc.page=Página %d de %d
@@ -273,7 +274,7 @@ tile.openblocks.drawingtable.description=La mesa de dibujo se usa para crear pla
 
 tile.openblocks.grave.name=Tumba
 tile.openblocks.trophy.name=Trofeo
-tile.openblocks.trophy.entity.name=Trofeo de %s 
+tile.openblocks.trophy.entity.name=Trofeo de %s
 tile.openblocks.canvasglass.name=Lienzo de cristal
 tile.openblocks.paintcan.name=Lata de pintura
 
